--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">AndroidTeamplate</string>
+    <string name="repeat_request">Повторить запрос</string>
+    <string name="something_went_wrong">Что-то пошло не так :\'(</string>
 </resources>
